syntax = "proto3";

package org.openkilda.server42.control.messaging;

import "google/protobuf/any.proto";

message CommandPacket {
    enum Type {
        ADD_FLOW = 0;
        REMOVE_FLOW = 1;
        CLEAR_FLOWS = 2;
        LIST_FLOWS = 3;
        PUSH_SETTINGS = 4;
        ADD_ISL = 5;
        REMOVE_ISL = 6;
        CLEAR_ISLS = 7;
        LIST_ISLS = 8;
    }
    int64 communication_id = 1;
    Type type = 2;
    repeated google.protobuf.Any command = 3;
}

message CommandPacketResponse {
    int64 communication_id = 1;
    repeated google.protobuf.Any response = 2;
    repeated google.protobuf.Any error = 3;
}

message PushSettings {
    int32 packet_generation_interval_in_ms = 1;
}

message Error {
    string what = 1;
}